--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.28.14",
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
