extra env vars for pinata

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,6 @@ NEXT_PUBLIC_WALLET_CONNECT_ID=<YOUR_VALUE>
 NEXT_PUBLIC_ALCHEMY_ID=<YOUR_VALUE>
 NEXT_PUBLIC_CHAIN_ID=1337
 NEXT_PUBLIC_ENABLE_TESTNETS=<true|false>
+PINATA_JWT=
+NEXT_PUBLIC_GATEWAY_URL=
+NEXT_PUBLIC_GATEWAY_TOKEN=
