--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_WALLET_CONNECT_ID=<YOUR_VALUE>
-NEXT_PUBLIC_ALCHEMY_ID=<YOUR_VALUE>
+NEXT_PUBLIC_ALCHEMY_API_KEY=<YOUR_VALUE>
 NEXT_PUBLIC_CHAIN_ID=1337
 NEXT_PUBLIC_ENABLE_TESTNETS=<true|false>
 PINATA_JWT=
