--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_WALLET_CONNECT_ID=<YOUR_VALUE>
 NEXT_PUBLIC_ALCHEMY_API_KEY=<YOUR_VALUE>
-NEXT_PUBLIC_CHAIN_ID=1337
-NEXT_PUBLIC_ENABLE_TESTNETS=<true|false>
+NEXT_PUBLIC_LOCAL_CHAIN_ID=1337
+NEXT_PUBLIC_ACTIVE_NETWORKS="mainnet|base|mode|sepolia|baseSepolia|modeTestnet|localhost"
 PINATA_JWT=
 NEXT_PUBLIC_GATEWAY_URL=
 NEXT_PUBLIC_GATEWAY_TOKEN=
